secondfile/objects/DHStatus_VLAN_Tag_Data__c.object
<CustomObject>
    <fields>
        <fullName>CFNetwork_VLAN_ID_Bottom__c</fullName>
        <label>CFNetwork VLAN ID Bottom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFNetwork_VLAN_ID_Top__c</fullName>
        <label>CFNetwork VLAN ID Top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_VLAN_ID_Bottom__c</fullName>
        <label>Customer VLAN ID Bottom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_VLAN_ID_Top__c</fullName>
        <label>Customer VLAN ID Top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHStatus_Connection_Level_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-Connection Level Data</label>
        <referenceTo>DHStatus_Connection_Level_Data__c</referenceTo>
        <relationshipLabel>DHStatus-VLAN Tag Datas</relationshipLabel>
        <relationshipName>DHStatus_VLAN_Tag_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NFNetwork_VLAN_ID_Bottom__c</fullName>
        <label>NFNetwork VLAN ID Bottom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NFNetwork_VLAN_ID_Top__c</fullName>
        <label>NFNetwork VLAN ID Top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DHStatus-VLAN Tag Data</label>
    <nameField>
        <displayFormat>DHVLANTAG-{000000}</displayFormat>
        <label>DHStatus-VLAN Tag Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-VLAN Tag Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>